# Robotica

./: BMSSP_README.md  README.md  bmssp  output.txt
BMSSP/: Makefile  bmssp.cpp  input.txt  input_complex.txt
CUDA/DQN/: .gitignore  CMakeLists.txt  INFORME_TECNICO.md  Makefile  README.md  SUMMARY.md  TEST_RESULTS.md  build.sh  cartpole_env.cpp  cartpole_env.h  cuda_kernels.cu  cuda_kernels.h  demo.sh  dqn.cpp  dqn.h  main.cpp
QLearningAlgorithms/DeepQNetwork/controllers/deepqnetwork/: deepqnetwork.py  dqn_model.pth  qtable.npy
QLearningAlgorithms/DeepQNetwork/worlds/: QLearning.wbt
QLearningAlgorithms/QLearning/controllers/qlearningcontroller/: qlearningcontroller.py  qtable.npy
QLearningAlgorithms/QLearning/protos/: FourWheelsRobot.proto
QLearningAlgorithms/QLearning/worlds/: .QLearning.wbproj
